--- a/_posts/2019-07-11-the-us-narrative-today.html
+++ b/_posts/2019-07-11-the-us-narrative-today.html
@@ -2725,107 +2725,107 @@ stories:
   domain: http://www.aspendailynews.com/
   link: https://www.aspendailynews.com/associated_press/new-orleans-area-braces-for-first-hurricane-of-the-season/article_b250f19c-bf96-5f20-9615-61ff6bf9b6fe.html
 images:
-- name: downtown-trucksilo-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-blue-circuit.jpg
-- name: gypsy-wagon-gypsywagon-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-purple-storm.jpg
-- name: old-door-lock-old-door-lock-2-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-colored-circuits.jpg
-- name: lincoln-memorial-lincolnmemorial-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-graham-sutherland.jpg
-- name: machine-road-machine-road-blue-circuit-3.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-blue-circuit-3.jpg
-- name: white-house-lawn-white-house-window-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-crabapple.jpg
-- name: mosaic-face-mosaic-face-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-crafty-painting.jpg
-- name: oldsmallboat-oldsmallboat-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-blue-electricity.jpg
-- name: rain-princess-DSC_0017.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-DSC_0017.jpg
-- name: aws-s3-stories-internet-gauages-3.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-internet-gauages-3.jpg
-- name: cargo-ship-cargo-ship-on-sea-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-monet-one.jpg
-- name: walled-garden-walled-garden-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-purple-storm.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-smooth-ride.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-atari-asteroids.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-atari-asteroids.png
-- name: status-berlin-status-berlin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin.jpg
-- name: border-fence-border-fence-on-hill-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-dali-two.jpg
-- name: blossombar-green-zuma-file-00-00-50-62.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-green-zuma-file-00-00-50-62.jpg
-- name: school-clouds-church-clouds-china-prop.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-china-prop.jpg
-- name: downtheline-downtheline-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-rainbow-festival.jpg
-- name: old-church-oldchurch-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-blue-granite.jpg
-- name: border-fence-border-fence-on-hill-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-plentiful.jpg
-- name: store-on-corner-store-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-nazi-poster.jpg
-- name: oldcabin-oldcabin-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-yellow-collage.jpg
-- name: miamibeach-miamibeach-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-mucha-mult.jpg
-- name: old-granary-field-oldhouse-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-dry-skin.jpg
-- name: dc-statue-dcstatue-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-space-pizza.jpg
-- name: walled-garden-walled-garden-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-aqua.jpg
-- name: downtown-los-angeles-downtown-la-horiz-circuit.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-horiz-circuit.JPG
-- name: berlinwall2-berlinwall-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-yellow-paper.jpg
-- name: hollywood-building-hollywood-building-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-really-hot.jpg
-- name: ellis-island-ellisisland-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-spagetti-accident.jpg
-- name: fence-mexico-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-ww2-dresden.jpg
-- name: bluelake-crunch-paper-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-crunch-paper-file-00-00-00-00.jpg
-- name: downtheline-downtheline-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-purp-paper.jpg
-- name: berlinwall-DSC-0084-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-colored-circuits.jpg
-- name: downtheline-downtheline-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-wols.jpg
-- name: old-school-house-old-schoolhouse-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-smooth-ride.jpg
-- name: crow-crow-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-dali-two.jpg
-- name: statue-of-liberty-front-view-statueofliberty-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-atari-missle.jpg
-- name: catacombs-catacombs-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-deep-connections.jpg
-- name: store-on-corner-oldcabin-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-monet-one.jpg
-- name: power-lines-power-lines-empty-space-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-colored-circuits.jpg
-- name: stories-cargo-ship-on-sea-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-cargo-ship-on-sea-constitution.jpg
-- name: legal-statue-legalstatue-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-colored-circuits.jpg
-- name: server-cloud-server-racks-door-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-dali-three.jpg
-- name: old-church-oldchurch-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-marcel-duchamp.jpg
-- name: docks-docks-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-atari-asteroids.jpg
-- name: supreme-court-supremecourt-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-alien-goggles.jpg
-- name: oldhousecars-house-old-cars-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-dali-three.jpg
-- name: san-francisco-street-view-san-francisco-street-view-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-blue-electricity.jpg
-- name: wave-IMG_8371.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wave-IMG_8371.jpg
+- name: amusement-park-amusement-park-2-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-dark-rain.jpg
+- name: victoria-victoria-corner-hotel.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/victoria-victoria-corner-hotel.jpg
+- name: abe-lincoln-one-purp-paper-file-00-00-07-91.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-purp-paper-file-00-00-07-91.jpg
+- name: dragon-desert-desert-dragon-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-aqua.jpg
+- name: death-valley-death-valley-national-park-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-dark-dali.jpg
+- name: flower-barbed-wire-flower-barbed-wire-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-yellow-paper.jpg
+- name: cargo-ship-cargo-ship-on-sea-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-post-modern.jpg
+- name: ellis-island-ellisisland-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-bright-sand.jpg
+- name: oldhouse-granaryfield-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-creativity.jpg
+- name: file-00_00_15_87.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/file-00_00_15_87.jpg
+- name: carry-load-carryload-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-gred-mash.jpg
+- name: trucksilo-trucksilo-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-matrix.jpg
+- name: berlinwall-DSC-0084-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-neo-instinct.jpg
+- name: cargo-ship-cargo-ship-on-sea-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-internet-numbers.jpg
+- name: border-crossing-bordercrossing-clean-view.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-clean-view.png
+- name: los-angeles-from-observatory-losangeles-from-observatory-blue-circuit-4.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-blue-circuit-4.jpg
+- name: bordercrossing-bordercrossing-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-oily-mcoilface.jpg
+- name: art-museum-art-museum-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-sand-paper.jpg
+- name: art-museum-art-museum-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-blue-granite.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-propaganda-leaflets.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-propaganda-leaflets.jpg
+- name: oldhouse-oldhouse-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-neo-instinct.jpg
+- name: old-door-lock-old-door-lock-2-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-bright-sand.jpg
+- name: eduardo-eduardo-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-cinnamon-rolls.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-blue-circuit-3.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-blue-circuit-3.JPG
+- name: white-house-lawn-white-house-lawn-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-blue-brush.jpg
+- name: bluelake-gan-vogh-file-00-00-38-67.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-gan-vogh-file-00-00-38-67.jpg
+- name: paris-paris-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-alien-goggles.jpg
+- name: oldhouse-granaryfield-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-blue-granite.jpg
+- name: status-berlin-status-berlin-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-dark-soul.jpg
+- name: meadowbutterfly-meadow-butterfly-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-blue-granite.jpg
+- name: bluelake-deep-connections-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-deep-connections-file-00-00-00-00.jpg
+- name: machine-road-machine-road-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-bright-sand.jpg
+- name: oldsmallboat-oldsmallboat-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-crafty-painting.jpg
+- name: blossombar-plentiful-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-plentiful-file-00-00-00-00.jpg
+- name: downtown-trucksilo-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-dali-three.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-feed-people.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-feed-people.JPG
+- name: ellis-island-ellis-island-room-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-nazi-poster.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-rainbow-festival.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-rainbow-festival.JPG
+- name: window-window-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-really-hot.jpg
+- name: downtown-fredericksburg-kand-two.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-kand-two.JPG
+- name: beach-clouds-lifeguard-beachclouds-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-gan-vogh.jpg
+- name: razorwire-DSC-0080-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-colorful-dream.jpg
+- name: crow-crow-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-aqua.jpg
+- name: downtheline-downtheline-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-smooth-ride.jpg
+- name: yosemite-yosemite-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-alien-goggles.jpg
+- name: mediterranean-mediterranean-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-blue-electricity.jpg
+- name: power-lines-power-lines-empty-space-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-smooth-ride.jpg
+- name: aws-s3-square-76-73-800-500-0-max-0--1--1-square.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-76-73-800-500-0-max-0--1--1-square.jpg
+- name: carry-load-carryload-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-yellow-collage.jpg
+- name: downtheline-downtheline-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-yellow-collage.jpg
+- name: aws-s3-stories-new-43-150-800-500-0-max-0--5--5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-43-150-800-500-0-max-0--5--5.jpg
 ---
 Warren's Immigration Plans Reflect Party's Leftward Shift.&nbsp;Jimmie Davis Bridge To Be Down To One Lane.&nbsp;Setbacks For Trump's Drive To Lower Prescription Drug Costs.&nbsp;Trump Issues Executive Order To Collect Citizenship Data.&nbsp;Vehicle Shot Twice In Possible Road Rage Incident.&nbsp;Fireworks Crown Busy Week.&nbsp;Cool, Wet Weather Delays Hay Cutting.&nbsp;Video Of The Week.&nbsp;
